crates/swc_ecma_parser/tests/jsx/errors/issue-6977/2/input.js
function Component(props) {
}

<Component x={...{a: x}} />